Cambio a comic neue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Payasitos</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Butterfly+Kids" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="fonts.css">
+    
+    <!-- <link href="https://fonts.googleapis.com/css?family=Butterfly+Kids" rel="stylesheet">  -->
 </head>
 <body>
     <div class="CabeceraUn">
